--- a/openfda-project/templates/list_drug.html
+++ b/openfda-project/templates/list_drug.html
@@ -3,7 +3,7 @@
 <h1>Lista de medicamentos</h1>
    <ul>
    {% for entry in content %}
-       <li><h2>{{ entry }}</h2>
+       <li>{{ entry }}
    {% endfor %}
    </ul>
 {% endblock %}
